--- a/ChronoKeep/UI/MainPages/ParticipantsPage.xaml
+++ b/ChronoKeep/UI/MainPages/ParticipantsPage.xaml
@@ -1,58 +1,221 @@
-﻿<Page x:Class="Chronokeep.UI.MainPages.ParticipantsPage"
+﻿<ui:UiPage x:Class="Chronokeep.UI.MainPages.ParticipantsPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:Chronokeep.UI.MainPages"
+      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       mc:Ignorable="d"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ParticipantsPage" Loaded="Page_Loaded">
 
     <Grid>
         <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="150"/>
-            </Grid.ColumnDefinitions>
-            <StackPanel Grid.Column="1">
-                <Button Name="ImportExcel" Content="Import" FontSize="14" Height="30" Margin="10,5,10,5" Click="Import_Click"/>
-                <Button Name="Export" Content="Export" FontSize="14" Height="30" Margin="10,0,10,5" Click="Export_Click" />
-                <Label Content="API Commands" FontSize="16" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Margin="5,5,5,0" Padding="0,0,0,0"/>
-                <Button Name="Upload" Content="Upload" FontSize="14" Height="30" Margin="10,5,10,5" Click="Upload_Click" />
-                <Button Name="Delete" Content="Delete Uploaded" FontSize="14" Height="30" Margin="10,0,10,5" Click="Delete_Click" />
-                <Label Content="View" FontSize="16" Margin="10,0,10,0" HorizontalContentAlignment="Center"/>
-                <DockPanel Name="DistanceBoxHolder" />
-                <ComboBox Name="DistanceBox" FontSize="16" Margin="10,0,10,0" SelectionChanged="DistanceBox_SelectionChanged" />
-                <Label Content="Sort By" FontSize="16" Margin="10,0,10,0" HorizontalContentAlignment="Center"/>
-                <ComboBox Name="SortBox" FontSize="16" Margin="10,0,10,5" SelectionChanged="SortBox_SelectionChanged" SelectedIndex="0">
-                    <ComboBoxItem Content="Distance" />
-                    <ComboBoxItem Content="Name" />
-                    <ComboBoxItem Content="Bib" />
-                </ComboBox>
-                <TextBox Name="SearchBox" Margin="10,0,10,0" TextChanged="SearchBox_TextChanged" FontSize="16" Height="25" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-                <Button Name="Add" Content="Add" FontSize="14" Height="30" Margin="10,10,10,5" Click="Add_Click"/>
-                <Button Name="Modify" Content="Modify" FontSize="14" Height="30" Margin="10,0,10,5" Click="Modify_Click"/>
-                <Button Name="Remove" Content="Remove" FontSize="14" Height="30" Margin="10,0,10,5" Click="Remove_Click"/>
-            </StackPanel>
-        <ListView Name="ParticipantsList" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" SelectionMode="Extended" Grid.Column="0" Loaded="ParticipantsList_Loaded" MouseDoubleClick="ParticipantsList_MouseDoubleClick">
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn Header="Bib" Width="45" DisplayMemberBinding="{Binding Bib}" />
-                    <GridViewColumn Header="Distance" DisplayMemberBinding="{Binding Distance}" />
-                    <GridViewColumn Header="First" DisplayMemberBinding="{Binding FirstName}" />
-                    <GridViewColumn Header="Last" DisplayMemberBinding="{Binding LastName}" />
-                    <GridViewColumn Header="Gender" DisplayMemberBinding="{Binding Gender}" />
-                    <GridViewColumn Header="Birthday" DisplayMemberBinding="{Binding Birthdate}" />
-                    <GridViewColumn Header="Parent" DisplayMemberBinding="{Binding Parent}" />
-                    <GridViewColumn Header="Mobile" DisplayMemberBinding="{Binding Mobile}" />
-                    <GridViewColumn Header="Email" DisplayMemberBinding="{Binding Email}" />
-                    <GridViewColumn Header="EC Name" DisplayMemberBinding="{Binding ECName}" />
-                    <GridViewColumn Header="EC Phone" DisplayMemberBinding="{Binding ECPhone}" />
-                    <GridViewColumn Header="Comments" DisplayMemberBinding="{Binding Comments}" />
-                    <GridViewColumn Header="Other" DisplayMemberBinding="{Binding Other}" />
-                    <GridViewColumn Header="Owes" DisplayMemberBinding="{Binding Owes}" />
-                    <GridViewColumn Header="Anon" DisplayMemberBinding="{Binding PrettyAnonymous}" />
-                </GridView>
-            </ListView.View>
-        </ListView>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="150"/>
+        </Grid.ColumnDefinitions>
+        <StackPanel Grid.Column="1">
+            <Button
+                Name="ImportExcel"
+                Content="Import"
+                FontSize="14"
+                Height="35"
+                Margin="10,5,10,5"
+                Click="Import_Click"
+                HorizontalAlignment="Stretch"
+                />
+            <Button
+                Name="Export"
+                Content="Export"
+                FontSize="14" 
+                Height="35"
+                Margin="10,0,10,5"
+                Click="Export_Click"
+                HorizontalAlignment="Stretch"
+                />
+            <TextBlock 
+                Text="API Commands"
+                FontSize="16" 
+                VerticalAlignment="Center"
+                TextAlignment="Center"
+                Margin="5,5,5,0"
+                Padding="0,0,0,0"
+                />
+            <Button 
+                Name="Upload" 
+                Content="Upload" 
+                FontSize="14" 
+                Height="35" 
+                Margin="10,5,10,5"
+                Click="Upload_Click" 
+                HorizontalAlignment="Stretch"
+                />
+            <Button 
+                Name="Delete"
+                Content="Delete Uploaded"
+                FontSize="14"
+                Height="35"
+                Margin="10,0,10,5"
+                Click="Delete_Click"
+                HorizontalAlignment="Stretch"
+                />
+            <TextBlock
+                Text="View"
+                FontSize="16"
+                Margin="10,0,10,0"
+                TextAlignment="Center"
+                />
+            <DockPanel Name="DistanceBoxHolder" />
+            <ComboBox 
+                Name="DistanceBox"
+                FontSize="16"
+                Margin="10,0,10,0"
+                SelectionChanged="DistanceBox_SelectionChanged"
+                />
+            <TextBlock 
+                Text="Sort By"
+                FontSize="16"
+                Margin="10,0,10,0" 
+                TextAlignment="Center"
+                />
+            <ComboBox 
+                Name="SortBox" 
+                FontSize="16"
+                Margin="10,0,10,5"
+                SelectionChanged="SortBox_SelectionChanged" 
+                SelectedIndex="0"
+                >
+                <ComboBoxItem Content="Distance" />
+                <ComboBoxItem Content="Name" />
+                <ComboBoxItem Content="Bib" />
+            </ComboBox>
+            <TextBox 
+                Name="SearchBox"
+                Margin="10,0,10,0"
+                TextChanged="SearchBox_TextChanged"
+                FontSize="16" 
+                Height="45"
+                VerticalContentAlignment="Center"
+                HorizontalContentAlignment="Center"
+                />
+            <Button 
+                Name="Add"
+                Content="Add" 
+                FontSize="14"
+                Height="35"
+                Margin="10,10,10,5" 
+                Click="Add_Click"
+                HorizontalAlignment="Stretch"
+                />
+            <Button 
+                Name="Modify"
+                Content="Modify" 
+                FontSize="14" 
+                Height="35" 
+                Margin="10,0,10,5"
+                Click="Modify_Click"
+                HorizontalAlignment="Stretch"
+                />
+            <Button 
+                Name="Remove" 
+                Content="Remove" 
+                FontSize="14"
+                Height="35"
+                Margin="10,0,10,5"
+                Click="Remove_Click"
+                HorizontalAlignment="Stretch"
+                />
+        </StackPanel>
+        <ScrollViewer x:Name="ScrollBox" Grid.Column="0" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="20"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Grid Grid.Row="0" Margin="8,0,8,0">
+                    <Grid.ColumnDefinitions>
+                        <!-- Bib -->
+                        <ColumnDefinition Width="45" />
+                        <!-- Distance -->
+                        <ColumnDefinition Width="125" />
+                        <!-- First -->
+                        <ColumnDefinition Width="100" />
+                        <!-- Last -->
+                        <ColumnDefinition Width="175" />
+                        <!-- Gender -->
+                        <ColumnDefinition Width="75" />
+                        <!-- Birthday -->
+                        <ColumnDefinition Width="75" />
+                        <!-- Mobile -->
+                        <ColumnDefinition Width="100" />
+                        <!-- EC Name -->
+                        <ColumnDefinition Width="150" />
+                        <!-- EC Phone -->
+                        <ColumnDefinition Width="150" />
+                        <!-- Anon -->
+                        <ColumnDefinition Width="35" />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0" Text="Bib"/>
+                    <TextBlock Grid.Column="1" Text="Distance"/>
+                    <TextBlock Grid.Column="2" Text="First"/>
+                    <TextBlock Grid.Column="3" Text="Last"/>
+                    <TextBlock Grid.Column="4" Text="Gender"/>
+                    <TextBlock Grid.Column="5" Text="Birthday"/>
+                    <TextBlock Grid.Column="6" Text="Mobile"/>
+                    <TextBlock Grid.Column="7" Text="EC Name"/>
+                    <TextBlock Grid.Column="8" Text="EC Phone"/>
+                    <TextBlock Grid.Column="9" Text="Anon"/>
+                </Grid>
+                <ListView 
+                    Name="ParticipantsList" 
+                    VerticalAlignment="Stretch"
+                    HorizontalAlignment="Stretch"
+                    SelectionMode="Extended"
+                    Loaded="ParticipantsList_Loaded" 
+                    MouseDoubleClick="ParticipantsList_MouseDoubleClick"
+                    Grid.Row="1"
+                    PreviewMouseWheel="ParticipantsList_PreviewMouseWheel"
+                    >
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <Grid Grid.Row="0">
+                                <Grid.ColumnDefinitions>
+                                    <!-- Bib -->
+                                    <ColumnDefinition Width="45" />
+                                    <!-- Distance -->
+                                    <ColumnDefinition Width="125" />
+                                    <!-- First -->
+                                    <ColumnDefinition Width="100" />
+                                    <!-- Last -->
+                                    <ColumnDefinition Width="175" />
+                                    <!-- Gender -->
+                                    <ColumnDefinition Width="75" />
+                                    <!-- Birthday -->
+                                    <ColumnDefinition Width="75" />
+                                    <!-- Mobile -->
+                                    <ColumnDefinition Width="100" />
+                                    <!-- EC Name -->
+                                    <ColumnDefinition Width="150" />
+                                    <!-- EC Phone -->
+                                    <ColumnDefinition Width="150" />
+                                    <!-- Anon -->
+                                    <ColumnDefinition Width="35" />
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Grid.Column="0" Text="{Binding Bib}"/>
+                                <TextBlock Grid.Column="1" Text="{Binding Distance}"/>
+                                <TextBlock Grid.Column="2" Text="{Binding FirstName}"/>
+                                <TextBlock Grid.Column="3" Text="{Binding LastName}"/>
+                                <TextBlock Grid.Column="4" Text="{Binding Gender}"/>
+                                <TextBlock Grid.Column="5" Text="{Binding Birthdate}"/>
+                                <TextBlock Grid.Column="6" Text="{Binding Mobile}"/>
+                                <TextBlock Grid.Column="7" Text="{Binding ECName}"/>
+                                <TextBlock Grid.Column="8" Text="{Binding ECPhone}"/>
+                                <TextBlock Grid.Column="9" Text="{Binding PrettyAnonymous}"/>
+                            </Grid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </Grid>
+        </ScrollViewer>
     </Grid>
-</Page>
+</ui:UiPage>
